--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Choosy</string>
+    <string name="let_apos_s_get_choosy">Let\'s find the best photo!</string>
+    <string name="who_apos_s_in_the_running">Step 1: Add 2+ photos</string>
+    <string name="which_do_you_like_best">Step 2: Choose your favorite!</string>
+    <string name="add_photos">Add photo</string>
+    <string name="image_1">Image 1</string>
+    <string name="image_2">Image 2</string>
 </resources>
